--- a/KPK.html
+++ b/KPK.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <body style="background-color: lightgoldenrodyellow;"></body>
     <h1><center><b><i>KHYBER PAKHTUNKHWA</i></b></center></h1>
 <hr>
 
