--- a/Balochistan.html
+++ b/Balochistan.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-
+    <body style="background-color: chocolate;">
     <h1><center><b><i>BALOCHISTAN</i></b></center></h1>
 <hr>
         <P>Balochistan  Urdu: بلوچستان; Balochi: بلۏچستان) is one of the four provinces of Pakistan. It is the largest province in terms of land area, forming the southwestern region of the country, but is the least populated. Its provincial capital and largest city is Quetta.</P>
